Make sure the background behind text is really dark

--- a/css/project-page.styl
+++ b/css/project-page.styl
@@ -140,6 +140,9 @@
   font-size: .75em
   color: #CDCDCD
 
+.project-text-content
+  background: rgba(0,0,0,0.8)
+  padding: 1.5em 3vw
 
 .project-metadata
   padding: 1.5em 3vw
